--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,9 @@
 /*GENERAL STYLES*/
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #777;
 }
 
 /*NAVBAR STYLES*/
@@ -10,6 +13,8 @@ body {
 .navbar-default {
     padding: 20px 0;
     margin-bottom: 0px;
+    background-color: transparent;
+    border-bottom: none;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     margin-top: 10px;
@@ -17,26 +22,73 @@ body {
 .navbar-brand {
     padding: 0px;
 }
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
+    letter-spacing: 2px;
+}
 li > a {
     letter-spacing: 2px;
     text-transform: uppercase;
     font-size: 12px;
+
+}
+.navbar-default .navbar-nav>.active>a {
+    background-color: transparent;
+    color: white;
+}
+li:active {
+    background-color: transparent;
+    color: white;
 }
 /*BACKGROUND IMAGE STYLES*/
+.main-section {
+    background-image: url("../assets/images/slide1.jpg") ;
+    background-repeat: no-repeat;
+    background-size:cover;
+    height: 736px;
+    position: relative;
+
+}
+.main-section:before {
+    background: rgba(0, 0, 0, 0.4);
+    content: "";
+    height: 100%;
+    filter: alpha(opacity=80);
+    position: absolute;
+    width: 100%;
+}
 .hero-text {
-    margin-top: 250px;
+    padding-top: 275px;
     text-align:center;
 }
-.medium-text {
-    text-align:center;
+.hero-text h2 {
+    font-size: 46px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    line-height: 60px;
+    color: #fff;
 }
+.hero-text p {
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin: auto auto 15px;
+    width: 105%;
+
+}
+
 .main-buttons {
     text-align:center;
-
+    margin-top: 30px;
 }
 .main-buttons > button {
     text-transform: uppercase;
-    margin: 0 3px 3px 3px;
+    margin: 0 10px 5px 10px;
     width: 160px;
     height: 50px;
+    border: none;
+}
+.start-btn {
+    background-color: #e24241;
+    color: #fff;
 }
