--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,10 +2,14 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    line-height: 24px;
+    font-weight: 300;
+    line-height: 26px;
     color: #777;
-}
 
+}
+h1, h2, h3, h4, h5, h6 {
+    color: #333;
+}
 /*NAVBAR STYLES*/
 .navbar-header > a > img {
     width: 150px;
@@ -62,7 +66,7 @@ li:active {
     text-align:center;
 }
 .hero-text h2 {
-    font-size: 46px;
+    font-size: 51px;
     font-weight: 400;
     letter-spacing: 1px;
     line-height: 60px;
@@ -73,8 +77,8 @@ li:active {
     font-weight: 400;
     letter-spacing: 1px;
     margin: auto auto 15px;
-    width: 105%;
-
+    width: 87%;
+    font-size: 17px;
 }
 
 .main-buttons {
@@ -87,8 +91,100 @@ li:active {
     width: 160px;
     height: 50px;
     border: none;
+    letter-spacing: 2px;
 }
 .start-btn {
     background-color: #e24241;
     color: #fff;
+}
+/*ABOUT US SECTION STYLES*/
+.section-padding {
+    padding: 60px 0;
+}
+.section-title {
+    margin-bottom: 60px;
+}
+.section-title h2 {
+    font-family: montserrat,sans-serif;
+    margin-bottom: 25px;
+}
+.section-title p {
+    margin: auto;
+    width: 77%;
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+.promotion-title {
+    margin-top: 40px;
+}
+.promotion-title h2{
+    margin-bottom: 10px;
+    line-height: 41px;
+}
+.promotion-title p{
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.btn-light-bg {
+    background: #e24241 none repeat scroll 0 0;
+    border: 2px solid #e24241;
+    border-radius: 500px;
+    color: #fff;
+    font-family: montserrat,sans-serif;
+    font-size: 12px;
+    padding: 10px 30px;
+    text-transform: uppercase;
+}
+.about-us img {
+    width: 100%
+}
+i {
+    background: #f8f8f8 none repeat scroll 0 0;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    color: #e24241;
+    font-size: 40px;
+    height: 120px;
+    line-height: 120px;
+    margin: 0 auto;
+    transition: all 0.3s ease 0s;
+    width: 120px;
+}
+.single-features {
+    padding: 20px;
+    text-align: center;
+}
+.single-features p{
+    line-height: 30px;
+}
+.single-pricing {
+    background-color: #FFFFFF;
+    padding-bottom: 25px;
+    padding-top: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.single-pricing h1 {
+    margin-top: 25px;
+}
+.single-pricing h1, h4 {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.single-pricing ul {
+    list-style-type: none;
+    padding-left: 0px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+}
+.single-pricing ul li {
+    border-bottom: 1px solid rgba(153, 153, 153, 0.3);
+    padding: 15px;
+}
+.dollar-sign {
+    position:relative;
+    top: -14px;
+    left: 6px;
+    font-size: 28px;
 }
