--- a/app/css/main.css
+++ b/app/css/main.css
@@ -278,4 +278,48 @@ footer {
 footer h4 {
     color: #ffffff;
     font-size: 14px;
+    letter-spacing: 2px;
+    margin-bottom: 25px;
+}
+footer ul {
+    list-style: none;
+    padding-left: 0px;
+}
+
+footer ul li {
+    padding-top: 5px;
+}
+footer ul li a {
+    color: #747474;
+    font-family: montserrat,sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: all 0.2s ease 0s;
+    letter-spacing: 0px;
+}
+footer ul li span {
+    color: #747474;
+    display: block;
+    font-family: montserrat,sans-serif;
+    font-size: 14px;
+    padding-top: 8px;
+}
+footer ul li i {
+    color: #fff;
+    float: left;
+    font-size: 16px;
+    line-height: 39px !important;
+    margin-right: 15px;
+    text-align: center;
+}
+.copyright {
+    border-top: 1px solid #333333;
+    padding: 30px 0;
+
+}
+.copyright p {
+    font-family: montserrat,sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
 }
