--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 /*NAVBAR STYLES*/
 .navbar-header > a > img {
     width: 150px;
+    margin-left: 10px;
 }
 .navbar-default {
     padding: 20px 0;
@@ -134,7 +135,7 @@ li:active {
     text-align:center;
 }
 .hero-text h2 {
-    font-size: 51px;
+    font-size: 48px;
     font-weight: 400;
     letter-spacing: 1px;
     line-height: 60px;
@@ -477,5 +478,32 @@ footer ul li i {
     100% {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
+    }
+}
+
+@media (max-width: 768px) {
+    .hero-text p {
+        width: 100%
+    }
+    .navbar-toggle {
+        background-color: #fff;
+    }
+    .navbar-toggle .icon-bar{
+        background-color: #e24241 !important;
+    }
+    .promotion-title {
+        margin-bottom: 60px;
+        margin-top: 0px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .menu-top {
+        background-color: #e24241;
+    }
+}
+@media only screen and (max-width: 360px) {
+    .hero-text h2 {
+        font-size: 30px;
+        line-height: 40px;
     }
 }
